--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Rebecca Walcott"
-  avatar           : "profile.png"
+  avatar           : "evans_pic.jpg"
   bio              : "PhD Candidate, Evans School of Public Policy & Governance"
   location         : "University of Washington"
   employer         : "Seattle, WA"
