--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 # main links links
 main:
-  - title: "Research"
+ - title: "About"
+    url: /about/  
+    
+ - title: "Research"
     url: /publications/  
 
   - title: "Teaching"
