--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,13 @@
 # main links links
 main:
-    
- - title: "Research"
-    url: /publications/  
+  - title: "Research"
+    url: /publications/ 
 
   - title: "Teaching"
     url: /teaching/    
-    
+
   - title: "CV"
     url: /cv/
+    
+  - title: "Guide"
+    url: /markdown/
